# gradio_multimodalchatbot

./: .gitignore  README.md  pyproject.toml
backend/gradio_multimodalchatbot/: __init__.py  multimodalchatbot.py
backend/gradio_multimodalchatbot/templates/component/: index.js  style.css
demo/: app.py  space.py
frontend/: Index.svelte  package-lock.json  package.json
frontend/shared/: ChatBot.svelte  utils.ts
