[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gradio_multimodalchatbot"
version = "0.0.1"
description = "Display text and media files (audio, video, images) in the same chat message bubble."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [{ name = "Freddy Boulton", email = "freddy@huggingface.co" }]
keywords = [
  "Chatbot",
  "Multimodal",
  "Media",
  "gradio custom component",
  "gradio-template-Chatbot"
]
# Add dependencies here
dependencies = ["gradio>=4.0,<5.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.urls]
space = "https://huggingface.co/spaces/freddyaboulton/gradio_multimodalchatbot/"

[tool.hatch.build]
artifacts = ["/backend/gradio_multimodalchatbot/templates", "*.pyi", "backend/gradio_multimodalchatbot/templates"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_multimodalchatbot"]
